# 2P_opto_tools

./: .gitignore  README.md  config.ini  pyproject.toml  run_pattern_builder_gui.py  run_pattern_builder_gui_base.bat  run_scanimage_bridge.py  scanimage_bridge.ini
configs/ar-lab-si2/: machine.ini
configs/ar-lab-si2/P1_P2_imaging/: config.ini
configs/ar-lab-si2/P1_imaging/: ._config.ini  config.ini
configs/ar-lab-si2/PS/: config.ini
configs/ar-lab-si2/PS-SI2026/: config.ini
data/TEST/DEFAULT/: schema.yaml
docs/: scanimage_2026_compatibility_assessment.md  scanimage_photostim_patterns.md
examples/: pattern_sequence_import_example.yaml
legacy/: SlmSingleCellPulse.m  SlmSpiralPattern.m  build_group_frame_stim_annotations.m  build_group_interpolated_long_tiffs.m  filter_downsample_tiff_chunked.m  find_same_red_fov_hardware_runs.m  plot_stimdata_cell_psth.m  siListener.m  siListener2.m  startSI_P1.m  startSI_P2.m  startSI_PS.m
legacy/MATLAB/: cfg_path1.cfg  cfg_path1notused.cfg
legacy/MATLAB/250707_MDF_P1/: 250707_MDF_P1.m
legacy/MATLAB/250707_MDF_P2/: 250707_MDF_P2.m
legacy/MATLAB/250710_MDF_RGG-RGG - all except SLM/: 250710_MDF_RGG-RGG - all except SLM.m  250710_MDF_RGG-RGG - all except SLM.m.bak
legacy/waveform/: BinaryVectorClock2kHz.m  info
scripts/: debug_photostim_experiment.py  debug_udp_json_shape.py  gui_udp_cli.py  schema_to_json.py
src/opto_schema_gui/: __init__.py  app.py  diagnostics.py  imaging_coordinates.py  io.py  legacy_matlab_codec.py  local_analysis.py  matlab_bridge.py  models.py  scanimage_bridge.py  scanimage_control.py
(+225 files in other folders)
